(style): fix header contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,7 +265,7 @@ footer ul {
 }
 /*--------------------------------------------- Booking */
 .hero-background__booking {
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)),
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3)),
     url("../images/ray-reyes-ND_kgsnEIeY-unsplash.jpg");
   background-position: center;
   background-repeat: no-repeat;
